[gd_scene load_steps=3 format=3 uid="uid://ch3xd2o070thq"]

[ext_resource type="Script" uid="uid://dy1rm575po04" path="res://gameplay/gui/gui.gd" id="1_6vp4t"]
[ext_resource type="FontFile" uid="uid://cjqm33jfi3sjh" path="res://fonts/Ubuntu-B.ttf" id="1_fn8ka"]

[node name="gui" type="Node"]
script = ExtResource("1_6vp4t")

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="top_container" type="HBoxContainer" parent="control/margin_container"]
layout_mode = 2
size_flags_vertical = 0

[node name="score_label" type="Label" parent="control/margin_container/top_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_fn8ka")
theme_override_font_sizes/font_size = 32
text = "ffa"
horizontal_alignment = 1

[node name="bottom_container" type="VBoxContainer" parent="control/margin_container"]
layout_mode = 2
size_flags_vertical = 8

[node name="sell_label" type="Label" parent="control/margin_container/bottom_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fn8ka")
theme_override_font_sizes/font_size = 32
text = "Sell X <type> for Y"
horizontal_alignment = 1
